# ReversedFront_Public

./: .gitignore  .taurignore  INSTALL_STRUCTURE.md  README.md  account_list.json  asset-manifest.json  build.bat  build.py  build.sh  config.json  index.android.bundle  index.html  main.py  package.json  requirements.txt  serve.bat
.github/: ACTIONS.md
.github/workflows/: AI_HANDOVER.md  build.yml  release.yml
assets/mod/: package.json
dexopt/: baseline.prof  baseline.profm
mod/: ReversedFront.iss  package-lock.json  webpack.config.js
mod/data/: RFcity.yaml  account_list.json  config.json  config.json.bak  exit_prompts.yaml
mod/js/: 706.main.bundle.js  accountManager.js  audioControls.js  customControls.js  entrypoint.js  exitConfirm.js  factionColorMap.js  factionMap.js  factionMapControl.js  globalAudioControl.js  index.js  main.bundle.js  markerConnections.js  markerData.js  markerDialogs.js  markerInteraction.js  notificationBox.js  panelDrag.js  rankingModal.js  rankingPanelDrag.js  swordsIcon.js  video_format_fix.js  voronoi.min.js
mod/py/: account_manager.py  account_settings_manager.py  api.py  auto_update.py  config_utils.py  constants.py  free_threaded_utils.py  (+9 more)
rf_launcher/: Cargo.toml  build.rs
rf_launcher/src/: main.rs
src-tauri/: Cargo.toml  build-with-lock-cleanup.ps1  build.rs  copy_resources.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  passionfruit.json
src-tauri/src/: account_manager.rs  commands.rs  config_manager.rs  lib.rs  main.rs  resource_manager.rs  updater.rs
web/: index.html
(+61 files in other folders)
