[package.metadata.winres]
OriginalFilename = "ReversedFront.exe"
ProductName = "ReversedFront"
FileDescription = "ReversedFront Launcher"
LegalCopyright = "Copyright 2025 MoLinOwO"
Icon = "../logo.ico"

[[bin]]
name = "ReversedFront"
path = "src/main.rs"
[package]
name = "rf_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3"
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"] }

[build-dependencies]
winres = "0.1"
